# pgsleuth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  tasks.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.md  design-feedback.md
.github/workflows/: ci.yml
blogs/: 2026-06-13-planning-improves-execution-speed.md  2026-06-13-shipping-tier-1.md  README.md
brain/: README.md  pyproject.toml
brain/pgsleuth_brain/: __init__.py
brain/tests/: test_smoke.py
crates/pgsleuth-cli/: Cargo.toml
crates/pgsleuth-cli/src/: cgroup_throttle.rs  checkpoint_storm.rs  collect_pg_activity.rs  collect_pg_stmt.rs  connection_storm.rs  main.rs  temp_spill.rs
crates/pgsleuth-core/: Cargo.toml
crates/pgsleuth-core/src/: finding.rs  lib.rs  window.rs
crates/pgsleuth-ebpf/: Cargo.toml
crates/pgsleuth-ebpf-common/: Cargo.toml
crates/pgsleuth-ebpf-common/src/: lib.rs
crates/pgsleuth-ebpf-loader/: Cargo.toml
crates/pgsleuth-ebpf-loader/src/: main.rs
crates/pgsleuth-ebpf/src/: main.rs
crates/pgsleuth-otel/: Cargo.toml
crates/pgsleuth-otel/src/: lib.rs  mapping.rs  metrics.rs
crates/pgsleuth-pg-ext/src/: lib.rs
crates/pgsleuth-postgres/: Cargo.toml
crates/pgsleuth-postgres/src/: lib.rs  stat_activity.rs  stat_checkpointer.rs  stat_statements.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
dashboards/: README.md  wal-io-latency.json
docs/design/: 000-architecture.md  001-rule-schema.md  002-poc-promotion.md
docs/research/: Database Observability Alarms.md  README.md  cloud-observability-blueprints.md  eBPF PostgreSQL Performance Monitoring Plan.md  ebpf-capabilities.md  ebpf-feasibility.md  ebpf-poc.md  k8s-ebpf-caveats.md  list of static probes.md  loaded_kernal_function.md  managed-pg-data.md
infra/: .gitignore
infra/docker/: README.md  build.sh  docker-compose.yml  ebpf-feasibility.Dockerfile  install-pg-ext.sh  load-ebpf.sh  pg-fixture.compose.yml  rust-dev.Dockerfile  setup-postgres.sh  validate-wal-device.sh
infra/docker/pg-fixture/: README.md  init-primary.sql  pg_hba.conf  postgresql.primary.conf  replica-entrypoint.sh
scripts/: bootstrap-github.sh
