[workspace]
resolver = "2"
members = [
    "crates/pgsleuth-core",
    "crates/pgsleuth-postgres",
    "crates/pgsleuth-otel",
    "crates/pgsleuth-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tarqwork/pgsleuth"
authors = ["pgsleuth contributors"]
rust-version = "1.78"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These get noisy in early-stage code; revisit for v0.2:
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Errors
anyhow = "1"
thiserror = "1"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Postgres
tokio-postgres = "0.7"
# OTel
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = "0.17"
# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
