[workspace]
resolver = "2"
members = [
    "crates/pgsleuth-core",
    "crates/pgsleuth-postgres",
    "crates/pgsleuth-otel",
    "crates/pgsleuth-cli",
    # eBPF crates (promoted from pgsleuth-ebpf-poc in #19; see
    # docs/design/002-poc-promotion.md).
    "crates/pgsleuth-ebpf",
    "crates/pgsleuth-ebpf-common",
    "crates/pgsleuth-ebpf-loader",
    "crates/pgsleuth-pg-ext",
    "crates/xtask",
]
# Two members can't build on the macOS host — `pgsleuth-ebpf` needs the
# `bpfel-unknown-none` target and `pgsleuth-pg-ext` needs pgrx +
# postgresql-server-dev-17. Excluding them from `default-members` keeps
# plain `cargo check` / `cargo build` from the workspace root usable on
# the host. Build them explicitly inside the rust-dev container:
#   cargo xtask build-ebpf            # kernel-side eBPF
#   cargo pgrx package -p pgsleuth-pg-ext
default-members = [
    "crates/pgsleuth-core",
    "crates/pgsleuth-postgres",
    "crates/pgsleuth-otel",
    "crates/pgsleuth-cli",
    "crates/pgsleuth-ebpf-common",
    "crates/pgsleuth-ebpf-loader",
    "crates/xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tarqwork/pgsleuth"
authors = ["pgsleuth contributors"]
rust-version = "1.78"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These get noisy in early-stage code; revisit for v0.2:
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# Errors
anyhow = "1"
thiserror = "1"
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Time — Finding.fired_at, rule windowing
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Postgres
tokio-postgres = "0.7"
# OTel
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = "0.17"
# CLI
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
# `panic = "abort"` is required by the eBPF kernel crate
# (bpfel-unknown-none has no unwinding infrastructure). Per-package
# profile overrides cannot set `panic`, so it has to live here.
# Side-effect: slightly smaller binaries for everyone, no exception
# unwinding in release builds — pgsleuth-cli does not use catch_unwind.
panic = "abort"
