[project]
name = "pgsleuth-brain"
version = "0.0.0"
description = "LLM-powered diagnostic brain for pgsleuth. Consumes findings, emits explanations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "pgsleuth contributors" },
]
dependencies = [
    # Pre-alpha: deliberately empty. Real deps land week 7 (phase 2).
    # When we add them, expect: httpx, pydantic, anthropic, openai, ollama,
    # opentelemetry-sdk, opentelemetry-exporter-otlp.
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pgsleuth_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
