[package]
name = "pgsleuth-otel"
description = "OpenTelemetry emitter for pgsleuth findings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pgsleuth-core = { path = "../pgsleuth-core" }
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "metrics"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
